--- a/demo/package.json
+++ b/demo/package.json
@@ -12,11 +12,12 @@
 		"hexo-generator-index": "^2.0.0",
 		"hexo-generator-searchdb": "^1.4.0",
 		"hexo-generator-tag": "^1.0.0",
-		"hexo-renderer-ejs": "^2.0.0",
 		"hexo-render-pug": "^2.1.4",
+		"hexo-renderer-ejs": "^2.0.0",
 		"hexo-renderer-less": "^4.0.0",
-		"hexo-renderer-marked": "^5.0.0",
+		"hexo-renderer-marked": "^7.0.1",
 		"hexo-renderer-stylus": "^2.1.0",
-		"hexo-server": "^3.0.0"
+		"hexo-server": "^3.0.0",
+		"tsup": "8.5.0"
 	}
 }
