--- a/docs/package.json
+++ b/docs/package.json
@@ -4,14 +4,9 @@
 	"private": true,
 	"type": "module",
 	"devDependencies": {
+		"vitepress": "^1.0.0-rc.20",
 		"less": "^4.1.3",
-		"unplugin-vue-components": "^0.22.4",
-		"vitepress": "^0.1.1",
-		"yaml": "^1.10.2"
-	},
-	"dependencies": {
-		"hexo-renderer-marked": "7.0.1",
-		"lint-staged": "16.0.0",
-		"tsup": "8.5.0"
+		"yaml": "^1.10.2",
+		"unplugin-vue-components": "^0.22.4"
 	}
 }
